# rag-pgvector-tuning

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: embedding.yaml  profiles.yaml  tuner_guardrails.yaml
docker/: entrypoint.sh
docs/: README.md
docs/recipes/: api-hardening.md  eval-recall.md  full-stack-docker.md  ivfflat-profile.md  load-testing-and-tuner.md  local-api-docker-postgres.md  metadata-and-filters.md  real-embeddings.md  troubleshooting.md
migrations/: 002_chunks.sql  003_index_hnsw.sql  004_chunks_metadata.sql
migrations/alternate/: ivfflat_profile.sql
scripts/: eval_recall.py  load_retrieve_qps.py  migrate.py
src/rag/: __init__.py  cli.py  config_loader.py  embedding_backend.py  embeddings.py  main.py  models_config.py  paths.py  profiles.py  settings.py  telemetry.py  tuner.py
src/rag_pgvector_tuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_physical_tuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  helpers.py  integration_worker.py  test_api_mocked.py  test_cli.py  test_config_loader.py  test_embedding_backend.py  test_embeddings.py  test_integration_api.py  test_migrate_script.py  test_models_config.py  test_open_core_features.py  test_openapi_contract.py  test_profiles.py  test_settings.py  test_telemetry_unit.py  test_tuner_extended.py  test_tuner_mvp.py
tests/fixtures/: openapi.json
